add day 1 part II, reformat code, add todo, prepare for day 2